Closed Bug 859617 Opened 11 years ago Closed 11 years ago

Fix the canonical isupports of webglcontext to match the object pointer

Categories

(Core :: Graphics: CanvasWebGL, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla23

People

(Reporter: bzbarsky, Assigned: bzbarsky)

References

Details

Attachments

(1 file)

So we can assert sanity in the WebIDL bindings.
https://hg.mozilla.org/integration/mozilla-inbound/rev/4547d76ad828
Flags: in-testsuite-
Whiteboard: [need review]
Target Milestone: --- → mozilla23
https://hg.mozilla.org/mozilla-central/rev/4547d76ad828
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: