Bug 859617.  Make WebGLContext's primary nsISupports its canonical nsISupports.  r=khuey